# streamlit-test

./: .gitignore  pyproject.toml  requirements.txt  streamlit_app.py
