[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["LinasKo <linkondrackis@gmail.com>"]
readme = "README.md"
packages = [{ include = "streamlit_test" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
